--- a/index.html
+++ b/index.html
@@ -82,47 +82,47 @@
           <p class="skills__subtitle">I work in such programs as</p>
           <div class="skills-programs">
             <div class="skills-programs_item">
-              <img class="icon" src="/images/Ps.svg" alt="PS" />
+              <img class="icon" src="./images/ps.svg" alt="PS" />
               <p class="programs">Adobe <br />Photoshop</p>
               <div class="stars">
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star1.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star1.svg" alt="" />
               </div>
             </div>
             <div class="skills-programs_item">
-              <img class="icon" src="/images/ai.svg" alt="Ai" />
+              <img class="icon" src="./images/ai.svg" alt="Ai" />
               <p class="programs">Adobe <br />Illustrator</p>
               <div class="stars">
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star1.svg" alt="" />
-                <img src="/images/Star1.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star1.svg" alt="" />
+                <img src="./images/star1.svg" alt="" />
               </div>
             </div>
             <div class="skills-programs_item">
-              <img class="icon" src="/images/Ae.svg" alt="Ae" />
+              <img class="icon" src="./images/ae.svg" alt="Ae" />
               <p class="programs">Adobe <br />After Effects</p>
               <div class="stars">
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star1.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star1.svg" alt="" />
               </div>
             </div>
             <div class="skills-programs_item">
-              <img class="icon" src="/images/Figma.svg" alt="Figma" />
+              <img class="icon" src="./images/figma.svg" alt="Figma" />
               <p class="programs">Figma</p>
               <div class="stars">
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star.svg" alt="" />
-                <img src="/images/Star1.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star.svg" alt="" />
+                <img src="./images/star1.svg" alt="" />
               </div>
             </div>
           </div>
