--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
-                <img src="./images/star1.svg" alt="" />
-                <img src="./images/star1.svg" alt="" />
+                <img src="./images/starempty.svg" alt="" />
+                <img src="./images/starempty.svg" alt="" />
               </div>
             </div>
             <div class="skills-programs_item">
@@ -111,7 +111,7 @@
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
-                <img src="./images/star1.svg" alt="" />
+                <img src="./images/starempty.svg" alt="" />
               </div>
             </div>
             <div class="skills-programs_item">
@@ -122,7 +122,7 @@
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
                 <img src="./images/star.svg" alt="" />
-                <img src="./images/star1.svg" alt="" />
+                <img src="./images/starempty.svg" alt="" />
               </div>
             </div>
           </div>
@@ -132,17 +132,17 @@
         <div class="container">
           <h2 class="portfolio__title">Portfolio</h2>
           <div class="portfolio__new-collection">
-            <img class="portfolio__img" src="/images/photo1.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photo1.jpg" alt="" />
             <a class="portfolio__link" href="#"
               >Online fashion store - Homepage</a
             >
           </div>
           <div class="portfolio__reebok">
-            <img class="portfolio__img" src="/images/photo2.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photo2.jpg" alt="" />
             <a class="portfolio__link" href="#">Reebok Store - Concept</a>
           </div>
           <div class="portfolio__braun">
-            <img class="portfolio__img" src="/images/photo3.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photo3.jpg" alt="" />
             <a class="portfolio__link" href="#">Braun Landing Page - Concept</a>
           </div>
         </div>
