--- a/index.html
+++ b/index.html
@@ -132,17 +132,17 @@
         <div class="container">
           <h2 class="portfolio__title">Portfolio</h2>
           <div class="portfolio__new-collection">
-            <img class="portfolio__img" src="./images/photo1.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photofirst.jpg" alt="" />
             <a class="portfolio__link" href="#"
               >Online fashion store - Homepage</a
             >
           </div>
           <div class="portfolio__reebok">
-            <img class="portfolio__img" src="./images/photo2.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photosecond.jpg" alt="" />
             <a class="portfolio__link" href="#">Reebok Store - Concept</a>
           </div>
           <div class="portfolio__braun">
-            <img class="portfolio__img" src="./images/photo3.jpg" alt="" />
+            <img class="portfolio__img" src="./images/photothird.jpg" alt="" />
             <a class="portfolio__link" href="#">Braun Landing Page - Concept</a>
           </div>
         </div>
@@ -157,10 +157,10 @@
         </p>
         <a class="footer__btm" href="mailto:V-kornilin@mail.ru">Send message</a>
         <div class="footer__social">
-          <a href=""><img src="/images/In.svg" /></a>
-          <a href=""><img src="/images/inst.svg" /></a>
-          <a href=""><img src="/images/be.svg" /></a>
-          <a href=""><img src="/images/sur.svg" /></a>
+          <a href=""><img src="./images/In.svg" /></a>
+          <a href=""><img src="./images/inst.svg" /></a>
+          <a href=""><img src="./images/be.svg" /></a>
+          <a href=""><img src="./images/sur.svg" /></a>
         </div>
         <p class="footer_text">
           Like me on <br />LinkedIn, Instagram, Behance, Dribble
